--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Just for fun",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "gulp build",
+    "start": "gulp"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,16 @@
   "bugs": {
     "url": "https://github.com/jestersunborn/vinyl/issues"
   },
-  "homepage": "https://github.com/jestersunborn/vinyl#readme"
+  "homepage": "https://github.com/jestersunborn/vinyl#readme",
+  "devDependencies": {
+    "browser-sync": "^2.24.7",
+    "gulp": "^4.0.0",
+    "gulp-clean-css": "^3.10.0",
+    "gulp-cli": "^2.0.1",
+    "gulp-concat-css": "^3.1.0",
+    "gulp-data": "^1.3.1",
+    "gulp-pug": "^4.0.1",
+    "gulp-swig": "^0.8.0",
+    "gulp-watch": "^5.0.1"
+  }
 }
