--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "gulp build",
-    "start": "gulp"
+    "start": "gulp",
+    "deploy": "gulp deploy"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
     "gulp-cli": "^2.0.1",
     "gulp-concat-css": "^3.1.0",
     "gulp-data": "^1.3.1",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-pug": "^4.0.1",
     "gulp-swig": "^0.8.0",
     "gulp-watch": "^5.0.1"
