--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
   "homepage": "https://github.com/jestersunborn/vinyl#readme",
   "devDependencies": {
     "browser-sync": "^2.24.7",
+    "gh-pages": "^1.2.0",
     "gulp": "^4.0.0",
     "gulp-clean-css": "^3.10.0",
     "gulp-cli": "^2.0.1",
     "gulp-concat-css": "^3.1.0",
     "gulp-data": "^1.3.1",
-    "gulp-gh-pages": "^0.5.4",
     "gulp-pug": "^4.0.1",
     "gulp-swig": "^0.8.0",
     "gulp-watch": "^5.0.1"
