--- a/package.json
+++ b/package.json
@@ -20,15 +20,21 @@
   },
   "homepage": "https://github.com/jestersunborn/vinyl#readme",
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "browser-sync": "^2.24.7",
     "gh-pages": "^1.2.0",
     "gulp": "^4.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^3.10.0",
     "gulp-cli": "^2.0.1",
+    "gulp-concat": "^2.6.1",
     "gulp-concat-css": "^3.1.0",
     "gulp-data": "^1.3.1",
     "gulp-pug": "^4.0.1",
     "gulp-swig": "^0.8.0",
+    "gulp-uglify": "^3.0.1",
     "gulp-watch": "^5.0.1"
   }
 }
